--- a/TeamGTextTwist/TeamGTextTwist.cbp
+++ b/TeamGTextTwist/TeamGTextTwist.cbp
@@ -14,6 +14,10 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="View" />
+					<Add directory="IO" />
+					<Add directory="Utils" />
+					<Add directory="controller" />
+					<Add directory="model" />
 				</Compiler>
 			</Target>
 		</Build>
@@ -23,9 +27,19 @@
 		<Linker>
 			<Add option="`fltk-config --ldstaticflags`" />
 		</Linker>
+		<Unit filename="IO/FileIO.cpp" />
+		<Unit filename="IO/FileIO.h" />
+		<Unit filename="Utils/Utils.cpp" />
+		<Unit filename="Utils/Utils.h" />
 		<Unit filename="View/TextTwistWindow.cpp" />
 		<Unit filename="View/TextTwistWindow.h" />
+		<Unit filename="controller/GameManager.cpp" />
+		<Unit filename="controller/GameManager.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="model/Leaderboard.cpp" />
+		<Unit filename="model/Leaderboard.h" />
+		<Unit filename="model/Player.cpp" />
+		<Unit filename="model/Player.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
